force-app/main/default/objects/Order/fields/Prazo_estimado__c.field-meta.xml
<CustomField>
    <fullName>Prazo_estimado__c</fullName>
    <inlineHelpText>O mesmo que &quot;Prazo de recebimento&quot;, porém basea-se em preenchimento manual do prazo (obsoleto)</inlineHelpText>
    <label>_Prazo estimado (del)</label>
    <type>Date</type>
</CustomField>