force-app/main/default/objects/Order/fields/Prazo_Prometido__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Prometido__c</fullName>
    <inlineHelpText>Prazo de entrega inicial ao cliente.</inlineHelpText>
    <label>_Prazo prometido (del)</label>
    <type>Date</type>
</CustomField>