force-app/main/default/objects/Order/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTO</fullName>
            </value>
            <value>
                <fullName>NORMAL</fullName>
                <default>true</default>
                <label>NORMAL</label>
            </value>
            <value>
                <fullName>BAIXO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>