force-app/main/default/objects/Order/fields/Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Proprietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Proprietário (del)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>