force-app/main/default/objects/Order/fields/Qualificacao__c.field-meta.xml
<CustomField>
    <fullName>Qualificacao__c</fullName>
    <label>Qualificação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>