force-app/main/default/objects/Order/fields/Qualificacao_Editada__c.field-meta.xml
<CustomField>
    <fullName>Qualificacao_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualificação Editada</label>
    <type>Checkbox</type>
</CustomField>