force-app/main/default/objects/Order/fields/Quantidade_Ag_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Ag_Entrega__c</fullName>
    <label>Quantidade Ag Entrega</label>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>equals</operation>
        <value>Aguardando Entrega Fornecedor</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>