force-app/main/default/objects/Order/fields/Quantidade_Itens_Atendidos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Itens_Atendidos__c</fullName>
    <label>_Quantidade Itens Atendidos (del)</label>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>equals</operation>
        <value>Atendido</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>