force-app/main/default/objects/Order/fields/Quantidade_Itens_Total__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Itens_Total__c</fullName>
    <label>_Quantidade Itens Total (del)</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>