force-app/main/default/objects/Order/fields/Raz_o_Social__c.field-meta.xml
<CustomField>
    <fullName>Raz_o_Social__c</fullName>
    <formula>Account.Raz_o_Social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Razão Social (del)</label>
    <type>Text</type>
</CustomField>