force-app/main/default/objects/Order/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <formula>IF(
MONTH(Periodo_do_contrato_inicio__c) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Periodo_do_contrato_inicio__c)),
TEXT(MONTH(Periodo_do_contrato_inicio__c))
)
+ &quot;/&quot; +
TEXT(YEAR(Periodo_do_contrato_inicio__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referência</label>
    <type>Text</type>
</CustomField>