force-app/main/default/objects/Order/fields/Referente_a_Demonstra_o_loca_o__c.field-meta.xml
<CustomField>
    <fullName>Referente_a_Demonstra_o_loca_o__c</fullName>
    <inlineHelpText>Informe se esta venda está relacionada a uma demonstração ou locação anterior.</inlineHelpText>
    <label>Referente a Demonstração/locação?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>