force-app/main/default/objects/Order/fields/RegionalServico__c.field-meta.xml
<CustomField>
    <fullName>RegionalServico__c</fullName>
    <label>Regional de Serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regi_es_Servi_o</valueSetName>
    </valueSet>
</CustomField>