force-app/main/default/objects/Order/fields/Registro_pai__c.field-meta.xml
<CustomField>
    <fullName>Registro_pai__c</fullName>
    <formula>IF(
	OpportunityId!=null,&apos;OPP &apos;+Opportunity.Numero_OP__c,
	IF(
		Ordem_de_trabalho__c!=null,
		&apos;OT &apos;+Ordem_de_trabalho__r.WorkOrderNumber,
		&apos;&apos;
	)
)</formula>
    <label>Registro pai</label>
    <type>Text</type>
</CustomField>