force-app/main/default/objects/Order/fields/Representante__c.field-meta.xml
<CustomField>
    <fullName>Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos (Representante)</relationshipLabel>
    <relationshipName>Pedidos6</relationshipName>
    <type>Lookup</type>
</CustomField>