force-app/main/default/objects/Order/fields/Separacao_urgente__c.field-meta.xml
<CustomField>
    <fullName>Separacao_urgente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separação urgente</label>
    <type>Checkbox</type>
</CustomField>