force-app/main/default/objects/Order/fields/separado__c.field-meta.xml
<CustomField>
    <fullName>separado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>separado</label>
    <type>Checkbox</type>
</CustomField>