force-app/main/default/objects/Order/fields/Separado_por__c.field-meta.xml
<CustomField>
    <fullName>Separado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Separado por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos6</relationshipName>
    <type>Lookup</type>
</CustomField>