force-app/main/default/objects/Order/fields/separador_pedido__c.field-meta.xml
<CustomField>
    <fullName>separador_pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Separador do pedido</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos (Separador do pedido)</relationshipLabel>
    <relationshipName>Pedidos8</relationshipName>
    <type>Lookup</type>
</CustomField>