force-app/main/default/objects/Order/fields/Situacao2__c.field-meta.xml
<CustomField>
    <fullName>Situacao2__c</fullName>
    <formula>TEXT(Data_de_termino__c - TODAY() ) + &quot; Dia(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação</label>
    <type>Text</type>
</CustomField>