force-app/main/default/objects/Order/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>IF(    
    AND(
        OR(
            TEXT(Status) = &apos;Ativo&apos;,
			TEXT(Status) = &apos;Em Andamento&apos;,
            TEXT(Status) = &apos;Entregue Parcial&apos;
        ),
        Prazo_de_entrega__c = Prazo_de_recebimento__c
    ),
    &apos;Atraso&apos;,
    IF(
        AND(
            OR(
                TEXT(Status) = &apos;Ativo&apos;,
				TEXT(Status) = &apos;Em Andamento&apos;,				
                TEXT(Status) = &apos;Entregue Parcial&apos;
            ),
            Prazo_de_entrega__c &gt; Prazo_de_recebimento__c
        ),
        &apos;Atraso&apos;,
        IF(
            AND(
                OR(
                    TEXT(Status) = &apos;Ativo&apos;,
                    TEXT(Status) = &apos;Em Andamento&apos;,
                    TEXT(Status) = &apos;Entregue Parcial&apos;
                ),
                Prazo_de_entrega__c &lt; Prazo_de_recebimento__c
            ),
            &apos;Atraso&apos;,
            IF(
                AND(
                    TEXT(Status) = &apos;Entregue Total&apos;,
                    Prazo_de_entrega__c = EndDate
                ),
                &apos;Pedido Entregue&apos;,
                IF(
                    AND(
                        TEXT(Status) = &apos;Entregue Total&apos;,
                        Prazo_de_entrega__c &gt; EndDate
                    ),
                    &apos;Pedido Entregue&apos;,
                    IF(
                        AND(
                            TEXT(Status) = &apos;Entregue Total&apos;,
                            Prazo_de_entrega__c &lt; EndDate
                        ),
                        &apos;Pedido Entregue&apos;,
						IF(
							TEXT(Status) = &apos;Rascunho&apos;,
							&apos;Em Desenvolvimento&apos;,
							IF(
								OR(
									TEXT(Status) = &apos;Aguardando Aprovação Comercial&apos;,
									TEXT(Status) = &apos;Aguardando Aprovação Financeira&apos;
								),
								&apos;Pendente de Aprovação&apos;,
								IF(
									TEXT(Status) = &apos;Cancelado/Reprovado&apos;,
									&apos;Não Aprovad0&apos;,
									IF(
										AND(
											TEXT(Status) = &apos;Entregue Total&apos;,
											TEXT(EndDate) = &apos;&apos;
										),
										&apos;Sem Data de Entrega&apos;,
										&apos;Sem Prazo Estimado&apos;
									)									
								)
							)
						)
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Situação (del)</label>
    <type>Text</type>
</CustomField>