force-app/main/default/objects/Order/fields/Status_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Status_Commerce__c</fullName>
    <label>Status Commerce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending payment</fullName>
                <label>Pagamento Pendente</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <label>Processando</label>
            </value>
            <value>
                <fullName>On hold</fullName>
                <label>Aguardando</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>Refunded</fullName>
                <label>Reembolsado</label>
            </value>
            <value>
                <fullName>Malsucedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>