force-app/main/default/objects/Order/fields/Status_Permissao__c.field-meta.xml
<CustomField>
    <fullName>Status_Permissao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_Status Permissão (del)</label>
    <type>Checkbox</type>
</CustomField>