force-app/main/default/objects/Order/fields/tecnico__c.field-meta.xml
<CustomField>
    <fullName>tecnico__c</fullName>
    <formula>TEXT(Ordem_de_trabalho__r.T_cnico_Respons_vel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Técnico</label>
    <type>Text</type>
</CustomField>