force-app/main/default/objects/Order/fields/Tempo_Ag_Aprov_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Ag_Aprov_Comercial__c</fullName>
    <formula>( FinalAgAprovComercial__c - InicioAgAprovComercial__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Ag Aprov Comercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>