force-app/main/default/objects/Order/fields/Tempo_Ag_Aprov_Financeira__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Ag_Aprov_Financeira__c</fullName>
    <formula>( FinalAgAprovFinanceira__c - InicioAgAprovFinanceira__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Ag Aprov Financeira</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>