force-app/main/default/objects/Order/fields/Tempo_Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Aprovado__c</fullName>
    <formula>( Final_Aprovado__c - Inicio_Aprovado__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Aprovado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>