force-app/main/default/objects/Order/fields/Tempo_At_Ent_Parcial__c.field-meta.xml
<CustomField>
    <fullName>Tempo_At_Ent_Parcial__c</fullName>
    <formula>( Final_At_Ent_Parcial__c  -  Inicio_At_Ent_Parcial__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo At/Ent Parcial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>