force-app/main/default/objects/Order/fields/Tempo_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Ativo__c</fullName>
    <formula>( Final_Ativo__c - Inicio_Ativo__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Ativo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>