force-app/main/default/objects/Order/fields/Tempo_em_Aberto__c.field-meta.xml
<CustomField>
    <fullName>Tempo_em_Aberto__c</fullName>
    <formula>IF( AND(TEXT(Status) != &quot;Rascunho&quot;, TEXT(Status) != &quot;Entregue Total&quot;,  TEXT(Status) != &quot;Atendido Total&quot;, TEXT(Status) != &quot;Cancelado&quot;, TEXT(Status) != &quot;Reprovado&quot;),
TODAY() - DATEVALUE(Inicio_Ativo__c) ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo em Aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>