force-app/main/default/objects/Order/fields/Tempo_em_Rascunho__c.field-meta.xml
<CustomField>
    <fullName>Tempo_em_Rascunho__c</fullName>
    <formula>(Final_Rascunho__c-CreatedDate)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo em Rascunho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>