force-app/main/default/objects/Order/fields/Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Testemunha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testemunha</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>