force-app/main/default/objects/Order/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>_Tipo (del)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>