force-app/main/default/objects/Order/fields/Tipo_cirurgico__c.field-meta.xml
<CustomField>
    <fullName>Tipo_cirurgico__c</fullName>
    <formula>TEXT(Opportunity.Tipo_cirurgico__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo cirúrgico</label>
    <type>Text</type>
</CustomField>