force-app/main/default/objects/Order/fields/Tipo_da_Compra__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Compra__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Forma_de_pagamento2__c, &quot;Pix&quot;),
ISPICKVAL(Forma_de_pagamento2__c, &quot;Dinheiro&quot;),
ISPICKVAL(Forma_de_pagamento2__c, &quot;Dinheiro&quot;),
ISPICKVAL(Forma_de_pagamento2__c, &quot;Transferência Bancária&quot;)
),
&quot;Compra à Vista&quot;,
&quot;Compra a Prazo&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo da Compra</label>
    <type>Text</type>
</CustomField>