force-app/main/default/objects/Order/fields/Tipo_de_Layout__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Layout__c</fullName>
    <description>Tipo de layout da nota fiscal faturamento automático</description>
    <inlineHelpText>Tipo de layout da nota fiscal faturamento automático</inlineHelpText>
    <label>Tipo de Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FATURA DE LOCAÇÃO</fullName>
            </value>
            <value>
                <fullName>NOTA DE DÉBITO LOCAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>