force-app/main/default/objects/Order/fields/Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro__c</fullName>
    <formula>IF(TEXT(Pedido_de_Representacao__c) = &apos;Sim&apos;, &apos;Representação&apos;, RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Tipo de Registro</label>
    <type>Text</type>
</CustomField>