force-app/main/default/objects/Order/fields/Tipo_de_Transa_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Transa_o__c</fullName>
    <description>tipo de transação de comprovante</description>
    <inlineHelpText>tipo de transação de comprovante</inlineHelpText>
    <label>Tipo de Transação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Débito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>