force-app/main/default/objects/Order/fields/Total_da_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Total_da_Oportunidade__c</fullName>
    <formula>Opportunity.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total da Oportunidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>