force-app/main/default/objects/Order/fields/Total_Recebido__c.field-meta.xml
<CustomField>
    <fullName>Total_Recebido__c</fullName>
    <label>Total Recebido</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>