force-app/main/default/objects/Order/fields/Total_Vet__c.field-meta.xml
<CustomField>
    <fullName>Total_Vet__c</fullName>
    <label>Total Vet</label>
    <summaryFilterItems>
        <field>OrderItem.Linha2__c</field>
        <operation>contains</operation>
        <value>VETERINÁRIA</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>