force-app/main/default/objects/Order/fields/Ultrassom_valor__c.field-meta.xml
<CustomField>
    <fullName>Ultrassom_valor__c</fullName>
    <label>Ultrassom (valor)</label>
    <summarizedField>OrderItem.Pre_o_Total2__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Linha2__c</field>
        <operation>equals</operation>
        <value>ULTRASSOM</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>