force-app/main/default/objects/Order/fields/Unidade_Hospitalar__c.field-meta.xml
<CustomField>
    <fullName>Unidade_Hospitalar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade Hospitalar</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Unidade Hospitalar)</relationshipLabel>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>