force-app/main/default/objects/Order/fields/UserOrGrupoShareId__c.field-meta.xml
<CustomField>
    <fullName>UserOrGrupoShareId__c</fullName>
    <label>UserOrGrupoShareId</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>