force-app/main/default/objects/Order/fields/Usu_rio__c.field-meta.xml
<CustomField>
    <fullName>Usu_rio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrutor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos2</relationshipName>
    <type>Lookup</type>
</CustomField>