force-app/main/default/objects/Order/fields/Usuario_Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Proprietario__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Usuário Proprietário (del)</label>
    <type>Text</type>
</CustomField>