force-app/main/default/objects/Order/fields/valor_comprovante__c.field-meta.xml
<CustomField>
    <fullName>valor_comprovante__c</fullName>
    <description>valor do comprovante de pagamento</description>
    <inlineHelpText>valor do comprovante de pagamento</inlineHelpText>
    <label>Valor da Transação</label>
    <length>25</length>
    <type>Text</type>
</CustomField>