force-app/main/default/objects/Order/fields/Valor_de_entrada__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_entrada__c</fullName>
    <formula>Quote.Valor_de_entrada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>