force-app/main/default/objects/Order/fields/Valor_de_tabela_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_tabela_total__c</fullName>
    <label>Valor de tabela total</label>
    <summarizedField>OrderItem.Valor_de_tabela_total__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.ListPrice</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>