force-app/main/default/objects/Order/fields/Valor_Recebido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Recebido__c</fullName>
    <inlineHelpText>Este campo deve ser preenchido apenas quando o pagamento for antecipado.</inlineHelpText>
    <label>Valor Recebido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>