force-app/main/default/objects/Order/fields/Valores_totais__c.field-meta.xml
<CustomField>
    <fullName>Valores_totais__c</fullName>
    <label>Valores totais</label>
    <summarizedField>OrderItem.Pre_o_Total2__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.ListPrice</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>