force-app/main/default/objects/Order/fields/Vencimento_do_prazo__c.field-meta.xml
<CustomField>
    <fullName>Vencimento_do_prazo__c</fullName>
    <formula>IF(TEXT(Status) = &apos;Entregue Total&apos;, null, Prazo_de_Entrega_Logistica__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencimento do prazo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>