force-app/main/default/objects/Order/fields/Vendedor_SKA__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_SKA__c</fullName>
    <formula>Vendedor__r.SKA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor SKA</label>
    <type>Checkbox</type>
</CustomField>