force-app/main/default/objects/Order/fields/VETERIN_RIA__c.field-meta.xml
<CustomField>
    <fullName>VETERIN_RIA__c</fullName>
    <label>VETERINÁRIA PMLS</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Linha2__c</field>
        <operation>equals</operation>
        <value>VETERINÁRIA PMLS</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>