force-app/main/default/objects/Order/fields/Veterinaria_porcentagem__c.field-meta.xml
<CustomField>
    <fullName>Veterinaria_porcentagem__c</fullName>
    <formula>IF(Linha_Locacao__c = &apos;VETERINÁRIA&apos;, 1, Veterinaria_valor__c / TotalAmount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veterinária (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>