force-app/main/default/objects/Order/fields/VIAS_A_REAS_DIF_CEIS__c.field-meta.xml
<CustomField>
    <fullName>VIAS_A_REAS_DIF_CEIS__c</fullName>
    <label>VIAS AÉREAS DIFÍCEIS</label>
    <summarizedField>OrderItem.Item__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Linha2__c</field>
        <operation>equals</operation>
        <value>VIAS AÉREAS DIFÍCEIS</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>