force-app/main/default/objects/Order/recordTypes/Demonstra_o_R_pida.recordType-meta.xml
<RecordType>
    <fullName>Demonstra_o_R_pida</fullName>
    <active>true</active>
    <label>Demonstração Rápida</label>
</RecordType>