force-app/main/default/objects/Order/recordTypes/Demonstracao.recordType-meta.xml
<RecordType>
    <fullName>Demonstracao</fullName>
    <active>true</active>
    <description>Exclusivo para pedidos de demonstração</description>
    <label>Demonstração</label>
</RecordType>