force-app/main/default/objects/Order/recordTypes/Hospcom.recordType-meta.xml
<RecordType>
    <fullName>Hospcom</fullName>
    <active>true</active>
    <description>Para faturamento das empresas do grupo Hospcom</description>
    <label>Hospcom</label>
</RecordType>