force-app/main/default/objects/Order/recordTypes/OPME_Baumer.recordType-meta.xml
<RecordType>
    <fullName>OPME_Baumer</fullName>
    <active>false</active>
    <label>OPME - Baumer</label>
</RecordType>