force-app/main/default/objects/Order/recordTypes/OPME_GERAL.recordType-meta.xml
<RecordType>
    <fullName>OPME_GERAL</fullName>
    <active>true</active>
    <label>OPME - GERAL</label>
</RecordType>