force-app/main/default/objects/Order/recordTypes/OPME_Zimmer.recordType-meta.xml
<RecordType>
    <fullName>OPME_Zimmer</fullName>
    <active>true</active>
    <label>OPME - Zimmer</label>
</RecordType>