force-app/main/default/objects/Order/recordTypes/Remessa_de_Loca_o.recordType-meta.xml
<RecordType>
    <fullName>Remessa_de_Loca_o</fullName>
    <active>true</active>
    <description>Remessa de locação</description>
    <label>Remessa de Locação</label>
</RecordType>