force-app/main/default/objects/Order/recordTypes/Representacao.recordType-meta.xml
<RecordType>
    <fullName>Representacao</fullName>
    <active>true</active>
    <description>Para acompanhamento dos pedidos de venda faturados direto pelo fabricante</description>
    <label>Representação</label>
</RecordType>