force-app/main/default/objects/Order/recordTypes/Venda_Balc_o.recordType-meta.xml
<RecordType>
    <fullName>Venda_Balc_o</fullName>
    <active>true</active>
    <label>Venda Balcão</label>
</RecordType>