force-app/main/default/objects/Order/recordTypes/Venda_Commerce.recordType-meta.xml
<RecordType>
    <fullName>Venda_Commerce</fullName>
    <active>true</active>
    <description>Tipo de registro para vendas oriundas do commerce</description>
    <label>Venda Commerce</label>
</RecordType>