force-app/main/default/objects/Order/validationRules/Aliquota_Variavel.validationRule-meta.xml
<ValidationRule>
    <fullName>Aliquota_Variavel</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(aliquota_variavel_vendedor__c),
        $Profile.Name != &quot;Administrador do sistema&quot;,
$Profile.Name != &quot;Gerente Regional&quot;   
)</errorConditionFormula>
    <errorMessage>Você não tem permissão para alterar o campo de Aliquota Variável</errorMessage>
</ValidationRule>